--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://dhawalz9.github.io/fcctasks/",
+  "homepage": "https://dhawalz9.github.io/fcctasks",
   "name": "fcctasks",
   "private": true,
   "version": "0.0.0",
